--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "Language" : "English",
   "Main": "Main Page",
-  "About": "About"
+  "About": "About",
+  "Page not found": "Page not found"
 }
