--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,6 @@
 {
   "Language" : "Русский",
   "Main": "Главная страница",
-  "About": "О странице"
+  "About": "О странице",
+  "Page not found": "Страница не найдена"
 }
